--- a/styles.css
+++ b/styles.css
@@ -171,3 +171,11 @@ button:hover {
   background-color: #f2f2;
 }
 
+.footer {
+  background-color: #C1CE5A;
+  color: #FFFFFF;
+  padding: 20px;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+}
