Madificaciones de imagen

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@
 }
 .team-section p {
   font-size: 1.2em;
-  color: rgb(8, 8, 66);
+  color: #F19446;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
   max-width: 30em;
@@ -71,43 +71,7 @@
 
 
 
-/* PAQUETES TURÍSTICOS */
 
-.paquete {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-bottom: 30px;
-}
-
-.paquete img {
-  flex: 1;
-  margin-right: 30px;
-}
-
-.paquete:nth-child(even) img {
-  margin-right: 0;
-  margin-left: 30px;
-}
-
-.paquete h3,
-.paquete p {
-  flex: 1;
-}
-
-.contenido-izquierda {
-  flex: 2;
-  text-align: left;
-}
-
-.paquete img {
-  order: 1;
-  margin-right: 30px;
-}
-
-.paquete img {
-  max-width: 30%;
-}
 
 /* ESTILOS TÍTULOS Y TEXTOS DE PAQUETES */
 
