--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 
 /* PRIMER CALL TO ACTION DE LA LANDING */
-.quiero-viajar {
+.quiero-saber {
   background-color: #48D6E9; 
   border: none;
   color: white;
