--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,8 @@ background-color: #F4AF5F;
 }
 
 
+/* ESTILOS DE LOS MEDIOS DE PAGO */
+
 .image-container {
   display: flex;
   flex-wrap: wrap;
@@ -134,31 +136,35 @@ background-color: #F4AF5F;
 }
 
 
-
-/* ESTILOS TÍTULOS Y TEXTOS DE PAQUETES */
-
-.paquete .titulo-paquete {
-  color: #48D6E9; 
-  font-family: Montserrat, sans-serif; 
+h3 {
+  font-family: 'Roboto', sans-serif;
 }
 
-.paquete h2 {
-  font-size: 3em;
-  color: #48D6E9 ;
+.image-container h3 {
+  font-size: 2em;
+  color: #48D6E9;
   text-align: center;
   font-family: 'Roboto', sans-serif;
   margin-bottom: 30px;
 }
 
-.paquete p {
-  font-size: 1.2em;
-  color: #F19446;
+
+.packs h3 {
+  font-size: 2em;
+  color: #48D6E9;
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
-  max-width: 30em;
-  margin: 0 auto;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 30px;
 }
 
+
+.clientes h3 {
+  font-size: 2em;
+  color: #48D6E9;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 30px;
+}
 
 
 /* ESTILOS DE TESTIMONIOS DE CLIENTES */
