--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,7 @@ background-color: #F4AF5F;
   padding: 10px;
 }
 
+/* ESTILOS TÍTULO DE MEDIO DE PAGO */
 
 h3 {
   font-family: 'Roboto', sans-serif;
@@ -148,7 +149,7 @@ h3 {
   margin-bottom: 30px;
 }
 
-
+/* ESTILOS TÍTULO DE PACKS */
 .packs h3 {
   font-size: 2em;
   color: #48D6E9;
@@ -157,7 +158,7 @@ h3 {
   margin-bottom: 30px;
 }
 
-
+/* ESTILOS TÍTULO SOBRE CLIENTES - PRESENTACIÓN DE TESTIMONIOS */
 .clientes h3 {
   font-size: 2em;
   color: #48D6E9;
@@ -176,7 +177,7 @@ h3 {
 }
 
 .testimonio {
-  width: 20%;
+  width: 26%;
   background-image: linear-gradient(to bottom,  rgba(193,206,90,0.4), rgba(255,255,255,0.4), rgba(72,214,233,0.4), rgba(244,175,95,0.4));
   border-radius: 10px;
   padding: 30px;
@@ -202,11 +203,11 @@ h3 {
 
 blockquote {
   font-family: 'Roboto', sans-serif;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 
-
+/* ESTILOS TÍTULO DE COTIZACIÓN */
 
 .cotizar h3 {
   font-size: 2em;
