--- a/styles.css
+++ b/styles.css
@@ -61,13 +61,13 @@ PARA QUE SEA LEGIBLE */
   display: flex;
   flex-direction: row;
   align-items: center;
-  background: url("foto.jpg") no-repeat;
+  background: url("./img/fotos.png") no-repeat;
   background-size: contain;
   background-position: left top;
   padding: 50px;
 }
 
-.team-section h1, 
+.team-section h2, 
 .team-section p {
   text-align: right;
   margin: 0;
