--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ PARA QUE SEA LEGIBLE */
 }
 .team-section p {
   font-size: 1.2em;
-  color: #F19446;
+  color: #BFBCB9;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
   max-width: 30em;
@@ -182,6 +182,7 @@ h3 {
   border-radius: 10px;
   padding: 30px;
   margin-bottom: 10px;
+  color: #A09C97;
 }
 
 .foto-testimonio {
