--- a/styles.css
+++ b/styles.css
@@ -182,7 +182,7 @@ h3 {
   border-radius: 10px;
   padding: 30px;
   margin-bottom: 10px;
-  color: #A09C97;
+  color: #878481;
 }
 
 .foto-testimonio {
