Modifiqué estilo de presentación team

--- a/styles.css
+++ b/styles.css
@@ -49,8 +49,8 @@ PARA QUE SEA LEGIBLE */
   margin-bottom: 30px;
 }
 .team-section p {
-  font-size: 1.2em;
-  color: #BFBCB9;
+  font-size: 1.1em;
+  color: #878481;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
   max-width: 30em;
