Agregué texto previo al form de cotización

--- a/styles.css
+++ b/styles.css
@@ -218,6 +218,9 @@ blockquote {
   margin-bottom: 30px;
 }
 
+.texto-gris {
+	color: #878481;
+}
 
 
 /* ESTILOS DE FORMULARIO DE PROCESO ESTILO WIZARD*/
