--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,34 @@
   cursor: pointer;
 }
 
-
+/* IMAGEN Y TEXTO PRINCIPAL */
+.slider {
+  position: relative;
+}
+.slider img {
+  width: 100%;
+  height: auto;
+}
+.text-container {
+  position: absolute;
+  top: 30%;
+  left: 30%;
+  transform: translate(-30%, -30%);
+  z-index: 1;
+  text-align: center;
+  color: #FFFFFF;
+  max-width: 30em;
+}
+.text-container h1 {
+  font-size: 3em;
+  margin-bottom: 0.5em;
+  font-family: 'Open Sans', sans-serif;
+}
+.text-container p {
+  font-size: 1.2em;
+  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+}
 
 /* RECTÁNGULO DONDE SE VA EL TEXTO DE PRESENTACIÓN DE LA EMPRESA
 SE  INTENTÓ QUE TENGA COLOR, PERO NO EXAGERADO, PARA QUE RESALTE, PERO CON ALGO DE OPACIDAD COMO 
