--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,13 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+.titulo {
+  font-size: 2.2em;
+  color: white;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 30px;
+}
 
 
 /* RECTÁNGULO DONDE SE VA EL TEXTO DE PRESENTACIÓN DE LA EMPRESA
