Cambio estilo de texto

--- a/styles.css
+++ b/styles.css
@@ -227,7 +227,7 @@ background-color: #F4AF5F;
   margin-bottom: 30px;
 }
 
-.texto-pack p {
+.texto-pack  {
   font-size: 1.1em;
   color: #878481;
   font-family: 'Montserrat', sans-serif;
