--- a/styles.css
+++ b/styles.css
@@ -190,7 +190,7 @@ background-color: #F4AF5F;
 .image-container {
 	margin: 0 auto;
 	max-width: 800px;
-	padding: 20px;
+	padding: 10px;
 }
 
 .img-right {
@@ -236,6 +236,7 @@ background-color: #F4AF5F;
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
+  padding: 20px;
 }
 
 .texto-pack  {
@@ -245,6 +246,9 @@ background-color: #F4AF5F;
   text-align: center;
 }
 
+.image-container.vacaciones img {
+  width: 47%;
+}
 
 
 /* ESTILOS TÍTULO SOBRE CLIENTES - PRESENTACIÓN DE TESTIMONIOS */
